--- a/photo-tagging-app/firebase.json
+++ b/photo-tagging-app/firebase.json
@@ -4,12 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "./dist",
     "rewrites": [
       {
         "source": "**",
