--- a/photo-tagging-app/package.json
+++ b/photo-tagging-app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.9.3",
     "core-js": "^3.6.5",
     "firebase": "^7.19.1",
     "vue": "^2.6.11",
